Added logic for hosting on GitHub.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "deploy": "gh-pages -d dist",
+        "deploy": "npm run build && gh-pages -d dist",
         "dev": "vite",
         "format": "prettier --write '**/*.{ts,js,css,html,json}'"
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "prettier": "^3.6.2",
         "typescript": "~5.9.3",
         "vite": "^7.1.7"
