--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
         "prettier": "^3.6.2",
         "typescript": "~5.9.3",
         "vite": "^7.1.7"
+    },
+    "dependencies": {
+        "@codemirror/lang-javascript": "^6.2.4",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/theme-one-dark": "^6.1.3",
+        "@codemirror/view": "^6.38.5",
+        "codemirror": "^6.0.2"
     }
 }
